remove middlewares
