# database/models/rider.js
@@ -6,7 +6,8 @@ module.exports=(sequelize,DataTypes)=>{
     const Rider =sequelize.define('Rider',{
         name:DataTypes.STRING,
         phone:DataTypes.STRING,
-     
+        latitude:DataTypes.DECIMAL,
+        longitude:DataTypes.DECIMAL,
     
 
     },{})
